# computer_vision

Labs/Data/Lab05/data/: akaze_desc_img_0.npy  akaze_desc_img_1.npy  akaze_kp_img_0.txt  akaze_kp_img_1.txt  camera_calibration.yml  orb_desc_img_0.npy  orb_desc_img_1.npy  orb_kp_img_0.txt  orb_kp_img_1.txt
Labs/Data/Lab07/rc_car/: camera_calibration.yml
Labs/Lab01-introduction/01-SVD/SVD_cpp/: CMakeLists.txt  main.cpp
Labs/Lab01-introduction/01-SVD/SVD_octave/: svd_octave.m
Labs/Lab01-introduction/01-SVD/SVD_python/: main.py
Labs/Lab01-introduction/02-testPointOnLine/testPointLiesOnLine_cpp/: CMakeLists.txt  main.cpp  matplotlib-cpp.h
Labs/Lab01-introduction/02-testPointOnLine/testPointLiesOnLine_octave/: testPointOnLine_octave.m
Labs/Lab01-introduction/02-testPointOnLine/testPointLiesOnLine_python/: main.py
Labs/Lab01-introduction/03-showCircle/showCircle_cpp/: CMakeLists.txt  main.cpp
Labs/Lab01-introduction/03-showCircle/showCircle_python/: main.py
Labs/Lab01-introduction/04-showImage/showImage_cpp/: CMakeLists.txt  main.cpp
Labs/Lab01-introduction/04-showImage/showImage_python/: main.py
Labs/Lab01-introduction/05-readVideo/readVideo_cpp/: CMakeLists.txt  main.cpp
Labs/Lab01-introduction/05-readVideo/readVideo_python/: main.py
Labs/Lab01-introduction/06-opticalFlowLucasKanade/opticalFlowLucasKanade_cpp/: CMakeLists.txt  main.cpp
Labs/Lab01-introduction/06-opticalFlowLucasKanade/opticalFlowLucasKanade_python/: main.py
Labs/Lab01-introduction/07-DenseOpticalFlow/denseOpticalFlow_cpp/: CMakeLists.txt  main.cpp
Labs/Lab01-introduction/07-DenseOpticalFlow/denseOpticalFlow_python/: main.py
Labs/Lab02-Homographies/01-showImage/showImage_cpp/: CMakeLists.txt  main.cpp
Labs/Lab02-Homographies/02-showVideo/showVideo_cpp/: CMakeLists.txt  main.cpp
Labs/Lab02-Homographies/02-showVideo/showVideo_python/: main.py
Labs/Lab02-Homographies/03-displayVideoWithInfo/displayVideoWithInfo_cpp/: CMakeLists.txt  main.cpp
Labs/Lab02-Homographies/03-displayVideoWithInfo/displayVideoWithInfo_python/: main.py
Labs/Lab02-Homographies/04-fourPointsHomography/calibrate_homography_manually_python/: main.py
Labs/Lab02-Homographies/04-fourPointsHomography/calibrate_homography_using_opencv_cpp/: CMakeLists.txt  main.cpp  robot_calibration.yml
Labs/Lab02-Homographies/04-fourPointsHomography/calibrate_homography_using_opencv_python/: main.py  robot_calibration.yml  test_calibration.yml
Labs/Lab02-Homographies/04-fourPointsHomography/fourPointsHomography_cpp/: CMakeLists.txt  main.cpp
Labs/Lab02-Homographies/04-fourPointsHomography/homography_with_optical_flow_python/: main.py  robot_calibration.yml
Labs/Lab02-Homographies/report/: report.aux  report.fdb_latexmk  report.fls  report.tex
Labs/Lab03-Camera-Calibration/report/: report.aux  report.fdb_latexmk  report.fls  report.tex
Labs/Lab05-Two_View_reconstruction/report/: report.aux  report.fdb_latexmk  report.fls  report.tex
Labs/Lab06-Structure_from_Motion/02-opencv_SFM/sfm/: CMakeLists.txt  main.cpp
Labs/Lab06-Structure_from_Motion/report/: report.aux  report.fdb_latexmk  report.fls  report.tex
Labs/Lab07-Visual_SLAM/python/: main.py
Labs/Lab07-Visual_SLAM/report/: report.aux  report.fdb_latexmk  report.fls  report.tex
(+32 files in other folders)
